--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>DJ FK3 - Spotify for Artists</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DJ FK3 | Spotify for Artists</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>Welcome to DJ FK3's Spotify Dashboard</h1>
-  <script src="main.js"></script>
+  <div class="container">
+    <h1>🎧 DJ FK3</h1>
+    <p>Welcome to the official Spotify artist dashboard. Stay up to date with your streams, fans, and stats.</p>
+
+    <div class="spotify-widget">
+      <iframe style="border-radius:12px" 
+        src="https://open.spotify.com/embed/artist/6eUKZXaKkcviH0Ku9w2n3V?utm_source=generator" 
+        width="100%" height="152" frameBorder="0" 
+        allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+        loading="lazy">
+      </iframe>
+    </div>
+
+    <p>📧 Contact: <a href="mailto:matthewmedina2000@yahoo.com">matthewmedina2000@yahoo.com</a></p>
+  </div>
 </body>
 </html>
