--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="spotify-widget">
       <iframe style="border-radius:12px" 
-        src="https://open.spotify.com/embed/artist/6eUKZXaKkcviH0Ku9w2n3V?utm_source=generator" 
+        src="https://open.spotify.com/embed/album/3VJ4Cg9me9u8yFuQ6MgBZN" 
         width="100%" height="152" frameBorder="0" 
         allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
         loading="lazy">
